# portablenote

./: .gitignore  Cargo.toml  README.md  portablenote-spec.md
cli/: Cargo.toml
cli/src/: main.rs  vault.rs
cli/tests/: manifest_after_mutation.rs
core/: ARCHITECTURE.md  Cargo.toml  obsidian-import.md
core/src/: checksum.rs  error.rs  events.rs  invariants.rs  lib.rs  queries.rs  types.rs
core/src/application/: block_file.rs  commit.rs  gate.rs  journal.rs  mod.rs  ports.rs  results.rs  runner.rs
core/src/application/use_cases/: add_block.rs  add_document.rs  add_edge.rs  append_section.rs  append_subsection.rs  delete_block.rs  delete_block_cascade.rs  delete_block_safe.rs  delete_document.rs  init_vault.rs  mod.rs  mutate_block_content.rs  remove_edge.rs  remove_section.rs  rename_block.rs  reorder_sections.rs
core/src/domain/: blocks.rs  checksum.rs  commands.rs  content.rs  documents.rs  edges.rs  error.rs  events.rs  format.rs  invariants.rs  mod.rs  queries.rs  types.rs
core/tests/: adapter_smoke_test.rs  fixture_loader_test.rs  invariants_test.rs  mutation_compliance_test.rs  queries_test.rs  schema_compliance_test.rs
core/tests/common/: mod.rs
core/tests/support/: assertion.rs  changeset.rs  factory.rs  harness.rs  in_memory.rs  mod.rs  scenario.rs
docs/: AUDIT-CORRECTNESS.md
infra/: Cargo.toml
infra/src/: clock.rs  lib.rs
spec/: README.md  portablenote-spec.md
spec/schemas/: block-graph.schema.json  block.schema.json  document.schema.json  graph-layout.schema.json  journal.schema.json  manifest.schema.json  names.schema.json  (+1 more)
(+113 files in other folders)
