[package]
name = "portablenote-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pn"
path = "src/main.rs"

[dependencies]
portablenote-core = { path = "../core" }
portablenote-infra = { path = "../infra" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
